objects/CSS_WS_Support_Engineer_Catalog__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Support Engineer per Distributor</description>
    <fields>
        <fullName>CSS_WS_DR_Code__c</fullName>
        <label>DR Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR__c</fullName>
        <label>DR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engineer_Name__c</fullName>
        <label>Engineer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CSS WS Support Engineer Catalog</label>
</CustomObject>